wip: epistemic logic section

--- a/Chapter_03.tex
+++ b/Chapter_03.tex
@@ -1,6 +1,45 @@
 \chapter{Dynamic Agent Safety Logic}
 	\label{CH_03}
 
+%\section{Interpreting $\Kns{}$ and $\Bels{}$}
+%Before continuing, we must clearly articulate the intended interpretation of our knowledge and belief operators. Epistemic logic can produce some counterintuitive results if the knowledge operator is interpreted inappropriately for the system. For example, the standard Distribution Axiom of knowledge, $\Kns{i}(\varphi \iimplies \psi) \iimplies (\Kns{i}\varphi \iimplies \Kns{i}\psi)$ states that knowledge is closed under implication. This presents several problems when the operator is interpreted as ``agent $i$ actively knows right now that $\varphi$". For empirical knowledge, the threat of global skepticism looms, because presumably $i$ knows that she exists as an embodied agent in the external world only if she is not a mind in a simulated reality. Therefore, she knows she is an embodied agent in the external world only if she knows she is not a mind in a simulated reality. By hypothesis, the skeptic would say, she does not know she is not a mind in a simulated reality. Therefore, she does not know she is an embodied agent in the external world. For statements of pure logic, the Distribution Axiom states that agents know all logical truths. 
+
+%The standard interpretation in the literature for an epistemic logic with just a knowledge operator is that ``agent $i$ \emph{implicitly} knows that $\varphi$," meaning something like the claim that $\varphi$ is a live candidate for knowledge for $i$, should $i$ ever examine the proposition. For doxastic logic, the same concern arises for belief, as it has the Distribution Axiom as well. The interpretation here is usually something like ``agent $i$'s beliefs \emph{commit} $i$ to $\varphi$," or ``$i$ is disposed to believe that $\varphi$. In both cases, the interpretation moves away from an active, explicit occurrence of the proposition in the agent's mind in order to avoid the weirdness of closure. We do not adopt this interpretation. We construct a logic that combines knowledge and belief in such a way that active explicit knowledge and belief are interpretations that make sense, for empirical knowledge and belief. We leave the problem of logical omniscient unresolved.
+
+%Our interpretation is analogous to a debate that occurs concerning the interpretation of probabilities among frequentists and Bayesians. Frequentists hold that probabilities represent objective frequencies that occur in the world, which can be counted through controlled experiment, and which should directly map to the probability for an event. For Bayesians, probabilities represent subjective uncertainty in the mind of a reasoner. Rather than constructing a model based on one or the other of these notions, we construct a model that includes both the notion of objectively available evidence and subjectively available evidence.
+
+%\begin{definition}[Objectively Available Evidence]~\label{obj_ev}
+%	Evidence is \emph{objectively available} for proposition $\varphi$ if and only if some source of information exists in the actual world that supports the proposition $\varphi$.
+%\end{definition}
+
+%What is it for a source of information to exist that supports a proposition? An event occurs which satisfies the proposition, and observable consequences of the event share mutual information with the proposition, and potentially other propositions. Thus, when a coin lands with \emph{heads} facing up, the light reflecting off the coin's surface is a source of information that supports the propositions that ``the coin landed \emph{heads} up," and ``the coin is unfair and has two \emph{heads}," and ``the coin landed \emph{tails} down." The light reflecting off the surface is objectively available evidence. If anyone sees the light reflecting off the coin, then this evidence becomes subjectively available to them. 
+
+%\begin{definition}[Subjectively Available Evidence]~\label{subj_ev}
+%	Evidence is \emph{subjectively available} to agent $i$ for proposition $\varphi$ if and only if $i$ has immediate mental awareness of some information, accurate or inaccurate, that supports the proposition $\varphi$.
+%\end{definition}
+
+%Seeing a coin land \emph{heads} is subjectively available evidence to the agent that sees it. Later, misremembering the event, and believing that one saw the coin land \emph{tails} is also subjectively available evidence. But the objectively available evidence is still that light that reflected off the coin's surface, which was in a \emph{heads} up orientation at the time. If someone, say Alice, tells you they saw a ghost, this is objectively available evidence for the propositions, ``Alice saw a ghost," and ``Alice claims to have seen a ghost." Whether you believe both of these propositions or not depends on myriad things, which this model does not address, but the soundwaves emanating from Alice's mouth when she tells you that she saw a ghost are objectively available evidence. If she said it out loud to no one in particular in a room she thought was empty of people, but a tape recorder was running, then her saying it and causing the information to be stored on the tape recorder would constitute objectively available evidence. When someone listens to the tape recorder, it becomes subjectively available evidence, and the possible worlds under her consideration include potentially both propositions, and almost certainly the latter.
+
+%Thus, from the actual world, epistemically possible worlds are created by objectively available evidence, and doxastically possible worlds are created by subjectively available evidence. At those doxastically possible worlds, further epistemically possible worlds may exist, but they are no longer generated by objectively available evidence. Instead, they are generated by subjective evidence of objective evidence. Consider the coin flip. When the coin lands \emph{heads} up, all epistemically possible worlds become constrained to those in which the proposition ``the coin landed \emph{heads} up" is true. When $i$ sees it happen, doxastically possible worlds exist in which the propositions ``the coin landed \emph{heads} up" and ``The evidence tells me that the coin landed \emph{heads} up" and ``I know that the coin landed \emph{heads} up" are true, because she is perceiving the objectively available evidence. Her perception of it makes it subjective, but the perception is that it is objective, which is true of the information flowing from the event, but not of the information flowing from her perception of it.
+%Thus, epistemically possible worlds are tied to the actual world in some sense, and doxastically possible worlds depend on an agent's mental consideration. What about the epistemic relation beneath the doxastic layer? For example, what about when $i$ remembers the event of the cThat is, what about the situation in which $i$ has subjectively available evidence for worlds in which her evidence is also objectively available? We maintain that there is a difference, but it is a subjective difference. When $i$ considers worlds possible in which she has objective evidence for a proposition, that evidence is subjectively objective, because her subjectively available evidence indicates to her that she has objective evidence. Ultimately, though, subjectively objective evidence is subjective. We capture this notion with the frame relation that $(\Rel{k}^i \circ \Rel{b}^i) \subseteq \Rel{b}^i$. Once it enters the subjective realm, it can never leave and be truly objective again; but it seems to $i$ that it is objective. So, when someone misremembers an event they observed, in remembering it they take a step down the doxastic possibility relation, and in activating it as evidence, they feel as if they are activating objective evidence, and so they take a step down an epistemic relation. But it is not objective evidence, it is mediated by the internal, subjective filter of the agent's own mind.
+
+%We leave the notions of ``source of information existing", ``support for propositions", and ``immediate mental awareness" unanalyzed, but trust that they are intuitively reducible to familiar concepts for the reader. They articulate the difference between experimental support published in a peer-reviewed journal article that supports a proposition, and an agent reading and believing the evidence in the article. In the former case, her epistemically possible worlds will include some in which the proposition is true, while in the latter case, her doxastically possible worlds will all come to satisfy the proposition. If she reads the article and uses it to update her beliefs according to some probabilistic account, perhaps the some doxastically worlds satisfy the proposition, while others do not, but she now considers the proposition possibly true. It was epistemically possible for her so long as there never has been objectively available evidence ruling it out, but it became doxastically possible for her once the evidence became subjectively available to her.
+
+%This still leaves the problem of logical omniscience to be addressed. It gets generated for our logic specifically in the following way. All propositional tautologies are theorems of the logic. By the rule of $\Kns{i}$ Necessitation, all theorems are known. The Distribution Axiom of $\Kns{i}$ over implication says if a theorem is known, and $i$ knows that the theorem $\varphi$ implies $\psi$, then $i$ knows $\psi$. Since knowledge implies belief, $\Bels{i}\psi$. Thus, $i$ knows and believes every mathematical theorem. Our solution depends on a function that partitions the set of atomic propositions into an \emph{active} set and an \emph{inactive} set.
+
+%\begin{definition}[Active Set]~\label{active_set}
+%	\emph{For a model $M$ with set of atomic propositions} $AtProp$\emph{, the active set} active  $\stackrel{def}{=} \{p\  |\  p \in AtProp \aand \mathit{activate(p)} = \mathit{True}\}$.
+%\end{definition}
+
+%\begin{definition}[Inactive Set]~\label{inactive_set}
+%	\emph{For a model $M$ with set of atomic propositions} $AtProp$\emph{, the inactive set} inactive  $\stackrel{def}{=} \{p\  |\  p \in AtProp \aand p\not\in \mathit{active}\}$.
+%\end{definition}
+
+%These sets formalize the notion that a human-like agent can actively consider only a limited number of atomic propositions at a time. When an atomic proposition is \emph{inactive}, it will be excluded from the model. Just as we build simple Kripke structures with only a few atomic propositions included, so do humans actually reason this way, with only a few atomic propositions under active consideration at a time. 
+
+%Now we can ameliorate the problem of skepticism by appealing to our notion of evidence as the source of possible worlds, and the fact that models include only active atomic propositions. For logic and mathematics, evidence consists in proofs. A proof is a set of sentences realizing the sequence of deductions from axioms and theorems to the proved theorem. A proof is tokenized when it is instantiated in the form of writing or speech. We say a tokenized proof constitutes objectively available evidence for a theorem, and perceiving that tokenized proof constitutes subjectively available evidence. Thus, even though there may be a Platonic proof that P!=NP out there waiting to be instantiated, until it is instantiated, no such objective evidence is available to human-like reasoners. That's why humans truly and without contradiction say that they do not know whether P=NP.
+
+%Furthermore, we can deny the problematic part of the problem of logical omniscience by denying that agents know all tautological logical implications. They know the ones with tokenized proofs. The ones without tokenized proofs are actually unknown to us. In order to identify an inconsistency, a critic would have to instantiate a proof of a previously unknown theorem, and in so doing, the logic under consideration here would update to include it as objectively available evidence for formulas consisting of atomic propositions that are active. 
 
 The logic for reasoning about information flow in knowledge games is called Dynamic Epistemic Logic (DEL). As its name suggests, it combines elements of epistemic logic and dynamic logic. Epistemic logic is the static logic for reasoning about knowledge, and dynamic logic is used to reason about actions. In dynamic logic semantics, nodes are states of the system (or of the world), and relations on nodes are transitions via programs or actions from node to node. If we think of each node in dynamic logic as being a model of epistemic logic, then actions become relations on models, representing transitions from one multi-agent epistemic model to another. For example, if we have a static epistemic model $M1$ representing the knowledge states of agents $1$ and $2$ at a moment, then the action $``p?"$ is a relation between $M1$ and $M2$, a new static epistemic model of $1$'s and $2$'s knowledge after the question is asked. All of this is captured by DEL.
 
@@ -187,29 +226,8 @@ The definitions of the dynamic modalities make use of a relation between two mod
 	\end{align*}
 \end{tcolorbox}
 
-\subsection{Interpreting $\Kns{}$ and $\Bels{arg1}$}
-Before continuing, we must clearly articulate the intended interpretation of our knowledge and belief operators. Epistemic logic can produce some counterintuitive results if the knowledge operator is interpreted inappropriately for the system. For example, the standard Distribution Axiom of knowledge, $\Kns{i}(\varphi \iimplies \psi) \iimplies (\Kns{i}\varphi \iimplies \Kns{i}\psi)$ states that agents are logically omniscient. This clearly is not the case for humans if the operator is interpreted as ``agent $i$ actively knows right now that $\varphi$". So, the standard interpretation in the literature for an epistemic logic with just a knowledge operator is that that ``agent $i$ \emph{implicitly} knows that $\varphi$," meaning something like the claim that $\varphi$ is a live candidate for knowledge for $i$, should they come to examine it. For doxastic logic, a similar concern arises for belief, as it has the Distribution Axiom as well. The interpretation here is usually something like ``agent $i$'s beliefs \emph{commit} $i$ to $\varphi$." In both cases, the interpretation moves away from an active, explicit occurrence of the proposition in the agent's mind in order to avoid the weirdness of closure. We do not adopt this interpretation. We construct a logic that combines knowledge and belief in such a way that active explicit knowledge and belief are interpretations that make sense.
 
-Our interpretation is analogous to a debate that occurs concerning the interpretation of probabilities among frequentists and Bayesians. Frequentists hold that probabilities represent objective frequencies that occur in the world, which can be counted through controlled experiment, and which should directly map to the probability for an event. For Bayesians, probabilities represent subjective uncertainty in the mind of a reasoner. Rather than constructing a model based on one or the other of these notions, we construct a model that includes both the notion of objectively available evidence and subjectively available evidence.
 
-\begin{definition}[Objectively Available Evidence]~\label{obj_ev}
-Evidence is \emph{objectively available} for proposition $\varphi$ if and only if some source of information exists in the actual world that supports the proposition $\varphi$.
-\end{definition}
-
-What is it for a source of information to exist that supports a proposition? An event occurs which satisfies the proposition, and observable consequences of the event share mutual information with the proposition, and potentially other propositions. Thus, when a coin lands with \emph{heads} facing up, the light reflecting off the coin's surface is a source of information that supports the propositions that ``the coin landed \emph{heads} up," and ``the coin is unfair and has two \emph{heads}," and ``the coin landed \emph{tails} down." The light reflecting off the surface is objectively available evidence. If anyone sees the light reflecting off the coin, then this evidence becomes subjectively available to them. 
-
-\begin{definition}[Subjectively Available Evidence]~\label{subj_ev}
-Evidence is \emph{subjectively available} to agent $i$ for proposition $\varphi$ if and only if $i$ has immediate mental awareness of some information, accurate or inaccurate, that supports the proposition $\varphi$.
-\end{definition}
-
-Seeing a coin land \emph{heads} is subjectively available evidence to the agent that sees it. Later, misremembering the event, and believing that one saw the coin land \emph{tails} is also subjectively available evidence. But the objectively available evidence is still that light that reflected off the coin's surface, which was in a \emph{heads} up orientation at the time. If someone, say Alice, tells you they saw a ghost, this is objectively available evidence for the propositions, ``Alice saw a ghost," and ``Alice claims to have seen a ghost." Whether you believe both of these propositions or not depends on myriad things, which this model does not address, but the soundwaves emanating from Alice's mouth when she tells you that she saw a ghost are objectively available evidence. If she said it out loud to no one in particular in a room she thought was empty of people, but a tape recorder was running, then her saying it and causing the information to be stored on the tape recorder would constitute objectively available evidence. When someone listens to the tape recorder, it becomes subjectively available evidence, and the possible worlds under her consideration include potentially both propositions, and almost certainly the latter.
-
-Thus, from the actual world, epistemically possible worlds are created by objectively available evidence, and doxastically possible worlds are created by subjectively available evidence. At those doxastically possible worlds, further epistemically possible worlds may exist, but they are no longer generated by objectively available evidence. Instead, they are generated by subjective evidence of objective evidence. Consider the coin flip. When the coin lands \emph{heads} up, all epistemically possible worlds become constrained to those in which the proposition ``the coin landed \emph{heads} up" is true. When $i$ sees it happen, doxastically possible worlds exist in which the propositions ``the coin landed \emph{heads} up" and ``The evidence tells me that the coin landed \emph{heads} up" and ``I know that the coin landed \emph{heads} up" are true, because she is perceiving the objectively available evidence. Her perception of it makes it subjective, but the perception is that it is objective, which is true of the information flowing from the event, but not of the information flowing from her perception of it.
-%Thus, epistemically possible worlds are tied to the actual world in some sense, and doxastically possible worlds depend on an agent's mental consideration. What about the epistemic relation beneath the doxastic layer? For example, what about when $i$ remembers the event of the cThat is, what about the situation in which $i$ has subjectively available evidence for worlds in which her evidence is also objectively available? We maintain that there is a difference, but it is a subjective difference. When $i$ considers worlds possible in which she has objective evidence for a proposition, that evidence is subjectively objective, because her subjectively available evidence indicates to her that she has objective evidence. Ultimately, though, subjectively objective evidence is subjective. We capture this notion with the frame relation that $(\Rel{k}^i \circ \Rel{b}^i) \subseteq \Rel{b}^i$. Once it enters the subjective realm, it can never leave and be truly objective again; but it seems to $i$ that it is objective. So, when someone misremembers an event they observed, in remembering it they take a step down the doxastic possibility relation, and in activating it as evidence, they feel as if they are activating objective evidence, and so they take a step down an epistemic relation. But it is not objective evidence, it is mediated by the internal, subjective filter of the agent's own mind.
-
-%We leave the notions of ``source of information existing", ``support for propositions", and ``immediate mental awareness" unanalyzed, but trust that they are intuitively reducible to familiar concepts for the reader. They articulate the difference between experimental support published in a peer-reviewed journal article that supports a proposition, and an agent reading and believing the evidence in the article. In the former case, her epistemically possible worlds will include some in which the proposition is true, while in the latter case, her doxastically possible worlds will all come to satisfy the proposition. If she reads the article and uses it to update her beliefs according to some probabilistic account, perhaps the some doxastically worlds satisfy the proposition, while others do not, but she now considers the proposition possibly true. It was epistemically possible for her so long as there never has been objectively available evidence ruling it out, but it became doxastically possible for her once the evidence became subjectively available to her.
-
-This still leaves the problem of logical omniscience to be addressed. It gets generated for our logic specifically in the following way. All propositional tautologies are theorems of the logic. By the rule of $\Kns{i}$ Necessitation, all theorems are known. The Distribution Axiom of $\Kns{i}$ over implication says if a theorem is known, and $i$ knows that the theorem $\varphi$ implies $\psi$, then $i$ knows $\psi$. Since knowledge implies belief, $\Bels{i}\psi$. Thus, $i$ knows and believes every mathematical theorem. TODO: fix logical omniscience.
 \subsection{Hilbert System}
 DASL is axiomatized by the following Hilbert system.\\
 
