--- a/Chapter_02.tex
+++ b/Chapter_02.tex
@@ -204,10 +204,10 @@ Relaxing a frame condition changes the $R$ relation, and in doing so changes the
 
 We saw earlier that reflexive frames are also serial frames, because we proved that we could derive the axiom for serial frames as a theorem from just the axiom for reflexive frames.
 
-These conditions are not exhaustive, but they represent some of the commonly combined conditions used to define axioms of different modal logics. By combining frame conditions, a modal operator is defined with the properties desired. For example, if we wish to define a modal operator for reasoning about the knowledge of ideally rational agents, as is done in Fagin \emph{et. al}~\cite{FHMV} and Hintikka~\cite{Hintikka}, we impose the frame conditions of transitivity, reflexivity, and Euclidean. However, if we wish to develop a logic for belief, as the previously cited works also do, we must impose transitivity, Euclidean, and seriality. The reasons for this are explored in the following sections.
+These conditions are not exhaustive, but they represent some of the commonly combined conditions used to define axioms of different modal logics. By combining frame conditions, a modal operator is defined with the properties desired. For example, if we wish to define a modal operator for reasoning about the knowledge of ideally rational agents, as is done in Fagin \emph{et. al}~\cite{FHMV}, we impose the frame conditions of transitivity, reflexivity, and Euclidean, or one that is transitive and reflexive, as in Hintikka~\cite{Hintikka}. However, if we wish to develop a logic for belief, as the previously cited works also do, we must impose transitivity, Euclidean, and seriality. The reasons for this are explored in the following sections.
 
 \section{Epistemic Logic}~\label{epistemic_logic}
-This section presents epistemic logic, the logic for reasoning about the knowledge of ideally rational agents. They are ideally rational in the sense that there is no bound on how much they can be said to know, nor on what propositions they are aware of at any one time. Thus, they have no problem conceiving of every possible sequence of moves a game may consist of, evaluating all possible outcomes, and deducing the optimal sequence of moves in order to maximize their own utilities. They are even stronger than contemporary computers in this way, which are bounded by time and space, and so are unable to actually compute the ideal strategy for an otherwise solvable game like Go. An ideally rational agent can solve Go and compute the game tree all the way to its end.
+Epistemic logic began with philosophical concerns about knowledge. Presently, it is more likely to be studied in computer science as the logic for reasoning about the knowledge of ideally rational agents in well-structured environments. The agents are ideally rational in the sense that there is no bound on how much they can be said to know, nor on what propositions they are aware of at any one time. Thus, they have no problem conceiving of every possible sequence of moves a game may consist of, evaluating all possible outcomes, and deducing the optimal sequence of moves in order to maximize their own utilities. They are even stronger than contemporary computers in this way, which are bounded by time and space, and so are unable to actually compute the ideal strategy for an otherwise solvable game like Go. An ideally rational agent can solve Go and compute the game tree all the way to its end. These are the agents of game theory, which always select the optimal move when they have perfect information about the game and the other players.
 
 The axioms that specify this level of knowledge are those introduced in Section~\ref{gametheory}, and recounted here without reference to common knowledge, which complicates things too much for our purposes:
 
@@ -217,8 +217,22 @@ $\mathbf{Agency\  Model\  in\  Classical\  Game\  Theory}$.\\
 (3) $\Kns{i}\varphi \iimplies \Kns{i}\Kns{i}\varphi$\\
 (4) $\tlnot \Kns{i}\varphi \iimplies \Kns{i}\tlnot\Kns{i}\varphi$.
 
-These are the axioms of $\mathit{S5}$ modal logic, and from a certain perspective they make sense. The first axiom holds for all \emph{normal} modal logics, and under the epistemic interpretation, it states that if an agent knows that $\varphi$ implies $\psi$, and she knows $\varphi$, then she knows $\psi$. This is intuitive enough on the first pass. The second axiom states that a known proposition must be true, and finds ample support from philosophers devoted to studying the nature of knowledge. The third axiom, \emph{positive introspection}, states that an agent knows something only if she knows \emph{that} she knows it. Finally, \emph{negative introspection} states that an agent does not know something only if she knows that she does not know it. Axioms (3) and (4) are clearly very strong notions of knowledge, and axiom (1) implies that agents are logically omniscient. Because these axioms are firmly rooted in the literature of formal epistemology, relaxing them in order to model more realistic agents requires a word or two. I spend this section introducing and defending my relaxation of the classical axiomatization. 
+These axioms make the knowledge operator an $\mathit{S5}$ modal operator. 
 
+The first axiom holds for all \emph{normal} modal logics, and under the epistemic interpretation, it states that if an agent knows that $\varphi$ implies $\psi$, and she knows $\varphi$, then she knows $\psi$. This is intuitive enough on the first pass, but can lead to a problem of global skepticism. If $i$ knows that she is an embodied agent in the external world only if she knows that she is not a brain in a vat perceiving a simulated reality, then she knows she is an embodied agent only if she knows she is not a brain in a vat. It seems clear that she cannot know that she is not a brain in a vat, because her sensory experience is compatible with either the embodied scenario of the brain in a vat scenario. Therefore, she does not know she is an embodied agent in the external world. Thus, many philosophers question whether knowledge for human-like agents is closed under logical implication like this.
+
+The second axiom states that a known proposition must be true, and finds ample support from philosophers devoted to studying the nature of knowledge. It can be considered the property of knowledge that most distinguishes it from belief, because beliefs can be false.
+
+The third axiom, \emph{positive introspection}, states that an agent knows something only if she knows \emph{that} she knows it. This imposes a high standard on knowledge, under the assumption that an agent can identify the conditions that guarantee the truth of a known proposition, and in being able to do so, are justified to a sufficient degree. However, this property is largely rejected by philosophers, as this requirement is thought to be largely unattainable. 
+
+Finally, \emph{negative introspection} states that an agent does not know something only if she knows that she does not know it. This has an undesirable effect of creating knowledge out of ignorance, for if $i$ does not know that she does not know $\varphi$, this is sufficient for inferring that she knows $\varphi$, according to negative introspection. This is fine for ideally rational agents, and indeed it is a noble aspirational goal to know what one is ignorant about, but for human-like agents it is entirely unrealistic as an axiom.
+
+These axioms are firmly rooted in the literature of formal epistemology and epistemic logic, and relaxing them in order to model more realistic agents requires a word or two. This section introduces and defends our relaxation of the classical axiomatization.
+
+\subsection{Why S5 Is Appealing} 
+Before presenting our relaxed axiom schema for knowledge, we acknowledge the appealing properties of the S5 knowledge operator. Logicians who adopt the S5 knowledge operator have good reasons for doing so, both technical and intuitive. The technical appeal lies in the fact that the S5 operator is well-behaved from a logical point of view. Epistemic logics with S5 operators are decidable because S5 operators have semantics that satisfy the finite model property, meaning that every invalid proposition has a finite counter-model. The S5 knowledge operator allows a formula prefixed by any arbitrary combination of $\Kns{i}$ and $\Poss{i}$ symbols to be reduced to a formula prefixed by at most two. This keeps the models small.
+
+On the intuitive side, the relations that define the semantics of an S5 knowledge operator are equivalence relations. They are defined as reflexive and Euclidean, which implies that they are also transitive and symmetric. Consider what it means for a world $v$ to be epistemically possible from the perspective of agent $i$ at world $w$.
 \section{Doxastic Logic}
 This section presents doxastic logic, the logic for reasoning about belief.
 %This is formalized in a couple different ways in the literature, sometimes as we did before mapping a proposition-world pair to a Boolean, sometimes defining propositions as sets of worlds, where $V(w)\in p$ if and only if $p$ is true at world $w$. The former convention will be followed here.
@@ -226,33 +240,33 @@ This section presents doxastic logic, the logic for reasoning about belief.
 
 
 %\subsection{Avionics and Formal Methods}
-\section{Logical Framework}~\label{logic_foundation}
+%\section{Logical Framework}~\label{logic_foundation}
 %This section introduces the logic used as a tool to formally model and reason about pilots in emergency situations. For most readers the logic to be used will be sufficiently complex and unfamiliar that a gradual approach is warranted, beginning with the basics of familiar Boolean logic, and advancing to the final logic specially developed for reasoning about pilot error.
 %\subsection{Logical Foundations} 
-Recall that Boolean logic is a simple logic for reasoning about basic propositions using the logical connectives `and', `or', `not', and `if...then'. It forms the foundation of most logics and has applications ranging from philosophy to circuit design. Propositions are represented as constants {\emph p,\ \emph q} and well-formed formulas of the language are constants and any proper combination of constants using the above logical connectives, represented symbolically as,
-$$\varphi \stackrel{def}{=} p\  |\  \varphi \wedge \varphi\  |\  \varphi \vee \varphi\  |\ \neg \varphi \ |\   \varphi \rightarrow \varphi. 
-$$
+%Recall that Boolean logic is a simple logic for reasoning about basic propositions using the logical connectives `and', `or', `not', and `if...then'. It forms the foundation of most logics and has applications ranging from philosophy to circuit design. Propositions are represented as constants {\emph p,\ \emph q} and well-formed formulas of the language are constants and any proper combination of constants using the above logical connectives, represented symbolically as,
+%$$\varphi \stackrel{def}{=} p\  |\  \varphi \wedge \varphi\  |\  \varphi \vee \varphi\  |\ \neg \varphi \ |\   \varphi \rightarrow \varphi. 
+%$$
 
-Boolean logic is limited in what it can express, however. Some situations require higher fidelity, for example when reasoning about knowledge. Consider the proposition, ``If Alice knows $p$, then $p$ is true." Philosophers of knowledge agree with this proposition, considering it a valid claim about knowledge, based on the principle that all known propositions are true. However, this validity cannot be faithfully represented in propositional logic as a general validity. Each sentence in the claim is assigned its own constant, resulting in a formalization like, ``$\mathit{a} \rightarrow \mathit{p}$," with {\emph a} representing ``Alice knows $p$," and $p$ representing ``$p$ is true." But $\mathit{a} \rightarrow \mathit{p}$ is not a validity of Boolean logic. 
+%Boolean logic is limited in what it can express, however. Some situations require higher fidelity, for example when reasoning about knowledge. Consider the proposition, ``If Alice knows $p$, then $p$ is true." Philosophers of knowledge agree with this proposition, considering it a valid claim about knowledge, based on the principle that all known propositions are true. However, this validity cannot be faithfully represented in propositional logic as a general validity. Each sentence in the claim is assigned its own constant, resulting in a formalization like, ``$\mathit{a} \rightarrow \mathit{p}$," with {\emph a} representing ``Alice knows $p$," and $p$ representing ``$p$ is true." But $\mathit{a} \rightarrow \mathit{p}$ is not a validity of Boolean logic. 
 
-To represent reasoning about knowledge, and other similar domains requiring higher fidelity, epistemic operators are added to the basic Boolean logic, resulting in the following logic:
+%To represent reasoning about knowledge, and other similar domains requiring higher fidelity, epistemic operators are added to the basic Boolean logic, resulting in the following logic:
 
-$$\varphi \stackrel{def}{=} p\  |\ \mathbf{K_{i}}\varphi\ |\ \neg \varphi\ |\ \varphi \wedge \varphi, 
-$$
-where $\mathbf{K_{i}}\varphi$ states that agent ${\boldmath i}$ \emph{knows} that \emph{$\varphi$}, allowing us to formally represent the above validity:
-$$\mathbf{K_{Alice}}p \rightarrow p.$$
+%$$\varphi \stackrel{def}{=} p\  |\ \mathbf{K_{i}}\varphi\ |\ \neg \varphi\ |\ \varphi \wedge \varphi, 
+%$$
+%where $\mathbf{K_{i}}\varphi$ states that agent ${\boldmath i}$ \emph{knows} that \emph{$\varphi$}, allowing us to formally represent the above validity:
+%$$\mathbf{K_{Alice}}p \rightarrow p.$$
 
-Semantics for epistemic logic are given by Kripke structures, which serve as models by which epistemic formulas are evaluated. At its core, a Kripke structure is a graph with nodes and edges, accompanied by a function determining which atomic propositions are true at which worlds. The nodes are normally thought of as possible worlds, or as possible states of the system being modeled. The edges are normally thought of as possibility relations among worlds or states. If, at a node representing a world {\emph w}, agent {\emph A} considers it possible that she is in world {\emph v}, the Kripke semantics modeling this situation would have world {\emph w}'s node connected to world {\emph v}'s node by an edge representing {\emph A}'s epistemic possibility relation.
+%Semantics for epistemic logic are given by Kripke structures, which serve as models by which epistemic formulas are evaluated. At its core, a Kripke structure is a graph with nodes and edges, accompanied by a function determining which atomic propositions are true at which worlds. The nodes are normally thought of as possible worlds, or as possible states of the system being modeled. The edges are normally thought of as possibility relations among worlds or states. If, at a node representing a world {\emph w}, agent {\emph A} considers it possible that she is in world {\emph v}, the Kripke semantics modeling this situation would have world {\emph w}'s node connected to world {\emph v}'s node by an edge representing {\emph A}'s epistemic possibility relation.
 
-Formally, we say a Kripke structure is a \emph{tuple} $\langle W,\ V,\ Agents,\ \{R_{i}|i\in Agents\}\rangle,$ where \emph{W} is a set of worlds, \emph{V} is a function from propositional constants to sets of worlds satisfying the proposition, \emph{Agents} is a set of agents, and each $R_{i}$ is agent \emph{i}'s epistemic possibility relation.
+%Formally, we say a Kripke structure is a \emph{tuple} $\langle W,\ V,\ Agents,\ \{R_{i}|i\in Agents\}\rangle,$ where \emph{W} is a set of worlds, \emph{V} is a function from propositional constants to sets of worlds satisfying the proposition, \emph{Agents} is a set of agents, and each $R_{i}$ is agent \emph{i}'s epistemic possibility relation.
 
-The semantics are as follows, for worlds $w,\ v\ \in W$:
-\begin{align*}
-w \models p\  &\mathbf{iff}\ w \in V(p) \\
-w \models \neg \varphi\  &\mathbf{iff}\  w\not\models \varphi  \\
-w \models \varphi \wedge \psi\ &\mathbf{iff}\ w\models \varphi\ \mathnormal{and}\ w\models \psi \\
-w \models \mathbf{K_{i}}\varphi\  &\mathbf{iff}\ \forall v,\ wR_{i}v\  \mathnormal{implies}\ v \models \varphi.
-\end{align*}
+%The semantics are as follows, for worlds $w,\ v\ \in W$:
+%\begin{align*}
+%w \models p\  &\mathbf{iff}\ w \in V(p) \\
+%w \models \neg \varphi\  &\mathbf{iff}\  w\not\models \varphi  \\
+%w \models \varphi \wedge \psi\ &\mathbf{iff}\ w\models \varphi\ \mathnormal{and}\ w\models \psi \\
+%w \models \mathbf{K_{i}}\varphi\  &\mathbf{iff}\ \forall v,\ wR_{i}v\  \mathnormal{implies}\ v \models \varphi.
+%\end{align*}
 
 Early applications of epistemic logic in information security modeled system components as agents whose knowledge represented the information flowing to them. Recently, a modified version of epistemic logic known as dynamic epistemic logic has been used in information security to formally reason about security properties involving human components of systems. The research described in this proposal advances along similar lines, treating pilots as human components of safety critical aviation systems and using dynamic epistemic logic to reason about them. The next section describes the basic dynamic epistemic logic.
 
@@ -286,11 +300,11 @@ The above figure illustrates the relationship between static epistemic models an
 
 We are concerned with an additional element: the \emph{safety} status of an action, and an agent's knowledge and belief about that. To capture this, we extend DEL and call the new logic Dynamic Agent Safety Logic (DASL), which we introduce in the next chapter. The next section lays out the state of formal methods involving human-machine systems.
 
-\section{Formal Methods}~\label{fm}
+%\section{Formal Methods}~\label{fm}
 %The field of formal methods grew out of attempts to verify the correctness of hardware and software. It was normally confined to systems deemed mission- or safety-critical, due to its high cost. Arguments for the use of formal methods normally involve an anecdote in which a system fails due to some sort of error missed by traditional testing methods but that would have been caught and prevented were formal methods used.
-Formal methods increase confidence that hardware and software components function correctly~\cite{RushbyFMbook}. They involve the application of mathematical techniques to the design and analysis of systems, usually the safety-critical components~\cite{johnson_butler_fm}. A standard approach is to develop an abstract specification of the software or hardware system, design the system to meet those specifications, and then use formal logic to prove that the designed system meets the desired safety specifications. 
+%Formal methods increase confidence that hardware and software components function correctly~\cite{RushbyFMbook}. They involve the application of mathematical techniques to the design and analysis of systems, usually the safety-critical components~\cite{johnson_butler_fm}. A standard approach is to develop an abstract specification of the software or hardware system, design the system to meet those specifications, and then use formal logic to prove that the designed system meets the desired safety specifications. 
 
-According to the Federal Aviation Administration (FAA), one of the top 12 causes of mistakes in the aviation workplace is a lack of awareness~\cite{faa}. According to Boeing and the FAA, approximately 80 per cent of aviation accidents (including maintenance accidents) are due to human error~\cite{boeing,faaHF}. To increase safety in human factors, the industry relies on education, psychology, anthropometrics, safety engineering, and to a limited extent, computer science. The primary focus of computer science research regarding human factors is the design and testing of software systems that are easy and intuitive for humans to interact with. 
+%According to the Federal Aviation Administration (FAA), one of the top 12 causes of mistakes in the aviation workplace is a lack of awareness~\cite{faa}. According to Boeing and the FAA, approximately 80 per cent of aviation accidents (including maintenance accidents) are due to human error~\cite{boeing,faaHF}. To increase safety in human factors, the industry relies on education, psychology, anthropometrics, safety engineering, and to a limited extent, computer science. The primary focus of computer science research regarding human factors is the design and testing of software systems that are easy and intuitive for humans to interact with. 
 
 %Formal methods are traditionally deployed in one of two ways. The more painful but perhaps more commonly used approach is to perform \emph{semantic archeology}, wherein an artifact that has already been constructed is formalized into a mathematically rigorous language and then reasoned about. The way urged by most contemporary researchers involves continuously specifying and verifying correctness throughout the development process, prior to system deployment. To facilitate this preferred approach, most formal methods researchers devote themselves to developing tools that are easy to use.
 %
@@ -298,17 +312,17 @@ According to the Federal Aviation Administration (FAA), one of the top 12 causes
 %
 %Thus we have a situation in which formal methods researchers advocate for the use of formal methods due to the inherent uncertainties involved with empirical testing of systems. However, they are satisfied to leave validation of the human component, the most risky component, to empirical testing.
 
-Some researchers have sought to develop formal methods for mitigating human-induced sources of failure~\cite{ButlerModeConfusion,Rushby_Mode_Confusion}. Thus far this work has focused on the development of formal methods tools for analyzing human machine interaction during the design and specification phase, rather than at runtime. The goals have been to develop software, and techniques for verifying the correctness of that software, to avoid mode confusion, a type of pilot error wherein the pilot believes the autopilot is in one mode, when in reality it is in another. In these situations, the autopilot is not offering protections concerning flight control inputs like thrust and pitch, so the pilot risks providing dangerous inputs.
+%Some researchers have sought to develop formal methods for mitigating human-induced sources of failure~\cite{ButlerModeConfusion,Rushby_Mode_Confusion}. Thus far this work has focused on the development of formal methods tools for analyzing human machine interaction during the design and specification phase, rather than at runtime. The goals have been to develop software, and techniques for verifying the correctness of that software, to avoid mode confusion, a type of pilot error wherein the pilot believes the autopilot is in one mode, when in reality it is in another. In these situations, the autopilot is not offering protections concerning flight control inputs like thrust and pitch, so the pilot risks providing dangerous inputs.
 
-Butler, Miller, Potts, and Carreno~\cite{ButlerModeConfusion} trace mode confusion to three sources:
-\begin{enumerate}
-	\item poor display of automation state
-	\item unnecessarily complex automation
-	\item flight crew has an incorrect mental model of the state of the aircraft
-\end{enumerate}
+%Butler, Miller, Potts, and Carreno~\cite{ButlerModeConfusion} trace mode confusion to three sources:
+%\begin{enumerate}
+%	\item poor display of automation state
+%	\item unnecessarily complex automation
+%	\item flight crew has an incorrect mental model of the state of the aircraft
+%\end{enumerate}
 
-\noindent They say human factors research focuses on mitigating item (1) above, and they develop formal models in the PVS automated theorem prover to address items (2) and (3). However, the formal models they develop are of the automation system, not of the human components.
+%\noindent They say human factors research focuses on mitigating item (1) above, and they develop formal models in the PVS automated theorem prover to address items (2) and (3). However, the formal models they develop are of the automation system, not of the human components.
 
-Similarly, Rushby~\cite{Rushby_Mode_Confusion} describes a class of errors he calls automation surprises, which are distinct but related to mode confusion. These occur when a pilot becomes surprised by the automated behavior of the system. He proposes a formal method addressing automation surprises that constructs a model of the system behavior, constructs a formal specification of a possible pilot's mental model of the system, and compares them for disagreement. His solution focuses on identifying potential automation surprises in the system, and both models are of the system behavior itself: one directly of the model, and one indirectly of the model, mediated through a hypothetical pilot's mind.
+%Similarly, Rushby~\cite{Rushby_Mode_Confusion} describes a class of errors he calls automation surprises, which are distinct but related to mode confusion. These occur when a pilot becomes surprised by the automated behavior of the system. He proposes a formal method addressing automation surprises that constructs a model of the system behavior, constructs a formal specification of a possible pilot's mental model of the system, and compares them for disagreement. His solution focuses on identifying potential automation surprises in the system, and both models are of the system behavior itself: one directly of the model, and one indirectly of the model, mediated through a hypothetical pilot's mind.
 
-In each of the above cases, the formal efforts focus on modeling the system itself, rather than on the human component, and they address the problem at design time. This work complements theirs by constructing a formal model of the pilot herself, and addressing the problem at runtime. Similarly, this work aims to address a variety of problems due to a pilot's loss of situational awareness, including mode confusion. The next chapter introduces Dynamic Agent Safety Logic.
+%In each of the above cases, the formal efforts focus on modeling the system itself, rather than on the human component, and they address the problem at design time. This work complements theirs by constructing a formal model of the pilot herself, and addressing the problem at runtime. Similarly, this work aims to address a variety of problems due to a pilot's loss of situational awareness, including mode confusion. The next chapter introduces Dynamic Agent Safety Logic.
