rewrite abstract to better fit paper

--- a/Synth_Sub/EpistemicLogicCriteria.tex
+++ b/Synth_Sub/EpistemicLogicCriteria.tex
@@ -174,7 +174,7 @@ grestore
 \maketitle
 
 \begin{abstract}
-Most epistemic logics model agents with an S5 knowledge operator, which precludes unknown unknowns and is defined semantically by an equivalence relation. The S5 knowledge operator is appealing because the equivalence relation matches our intuition that epistemically possible states should be indistinguishable from an agent's perspective, which we call the indistinguishability criterion for ignorance (ICI). However, the S5 knowledge operator is inappropriate for human-like agents, who have unknown unknowns. Thus, the epistemic logician interested in modeling human-like knowledge face a dilemma: deny the existence of unknown unknowns, or satisfy the ICI. This paper defines a multi-modal logic of knowledge and belief that is appropriate for human-like agents, allowing for unknown unknowns, mistaken but justified beliefs, with what we call a subjective equivalence relation. 
+Most epistemic logics model agents with an S5 knowledge operator, which is appealing for its technical properties. Many recent advances in epistemic logic involve extending static S5 knowledge operators with dynamic operators of action. However, the S5 knowledge operator is inappropriate for human-like agents, who have unknown unknowns, false beliefs, and limited introspection abilities. We identify a set of criteria that an epistemic logic for human-like agents should seek to satisfy, and take steps toward identifying one that can serve as a realistic foundation for a dynamic logic of agency.
 
 \keywords{First keyword \and Second keyword \and More}
 % \PACS{PACS code1 \and PACS code2 \and more}
