change 'may have' to 'has evidence that'

--- a/Synth_Sub/EpistemicLogicCriteria.tex
+++ b/Synth_Sub/EpistemicLogicCriteria.tex
@@ -236,7 +236,7 @@ When a knowledge operator is defined with a possibility relation that is \emph{r
 $$\varphi := p\  |\  \varphi \tland \varphi\   |\ \tlnot \varphi \ |\   \Kns{i}\varphi\ |\ \Poss{i}\varphi. 
 $$
 \end{center}
-The remaining Boolean operators are defined and interpreted as usual. $\Kns{i}\varphi$ reads in English that ``agent $i$ knows that $\varphi$ is the case." This should be unproblematic. $\Poss{i}$, however, is not easily interpretable into English. This can result in rather verbose translations of formulas it appears in. For example, $\Poss{i}\varphi$ might be translated as ``$i$ cannot rule out that $\varphi$ might be the case, given her evidence". Imagine this translation for a formula of any real complexity! One might translate it as "$i$ considers $\varphi$ possible, given her evidence", but we resist this translation for reasons to be clear later. Another common translation is, "for all $i$ knows, it may be that $\varphi$." We interpret this translation and the evidence-based translation as equivalent, but we use the following shorthand to capture them: ``$i$ \emph{may have} that $\varphi$."
+The remaining Boolean operators are defined and interpreted as usual. $\Kns{i}\varphi$ reads in English that ``agent $i$ knows that $\varphi$ is the case." This should be unproblematic. $\Poss{i}$, however, is not easily interpretable into English. This can result in rather verbose translations of formulas it appears in. For example, $\Poss{i}\varphi$ might be translated as ``$i$ cannot rule out that $\varphi$ might be the case, given her evidence". Imagine this translation for a formula of any real complexity! One might translate it as "$i$ considers $\varphi$ possible, given her evidence", but we resist this translation for reasons to be clear later. Another common translation is, "for all $i$ knows, it may be that $\varphi$." We interpret this translation and the evidence-based translation as equivalent, but we use the following shorthand to capture them: ``$i$ \emph{has evidence} that $\varphi$."
 
 Later in the paper we consider logics with modal operators for belief. These operators are $\Bels{i}$ and $\BPoss{i}$. $\Bels{i}$ has an intuitive interpretation as ``$i$ believes that $\varphi$. We reserve ``$i$ considers it possible that $\varphi$" for $\BPoss{i}\varphi$, and we will typically shorten this to ``$i$ considers that $\varphi$."
 
@@ -383,7 +383,7 @@ A similar normativity is present in probabilistic reasoning. The axioms and theo
 
 Epistemic logic, and modal logics generally, do not tend to have the same normative character. The normative aspects of S5 epistemic logic might be due to the fact that more knowledge allows for better decisions, as is the case with ideally rational agents in game theory. If you can approximate the knowledge conditions of these agents, and use an optimal decision procedure to choose which action to take, then you can approximate the optimal outcomes of ideally rational agents. 
 
-Consider a case in which Bob does not know there is a car in his blind spot on the highway. Bob is driving at a reasonable speed, and checked his blind spot a reasonable time ago. But there is a car there now because it is moving unreasonably fast. Bob is about to change lanes. He reasons, ``I checked my blind spot a short time ago and saw no car, so I have recent evidence that no car is there, but I should check again to make sure." Has Bob reasoned invalidly? The contrapositive of negative introspection states that if Bob \emph{may have}\footnote{Recall this is our shorthand for ($\Poss{Bob}$)} that he knows that the lane next to him is clear, then he knows it. But Bob identified that he may have that he knows, but does not know. According to S5 epistemic logic, his reasoning is invalid. But he clearly is better off by reasoning this way and checking his mirror again before changing lanes.
+Consider a case in which Bob does not know there is a car in his blind spot on the highway. Bob is driving at a reasonable speed, and checked his blind spot a reasonable time ago. But there is a car there now because it is moving unreasonably fast. Bob is about to change lanes. He reasons, ``I checked my blind spot a short time ago and saw no car, so I have recent evidence that no car is there, but I should check again to make sure." Has Bob reasoned invalidly? The contrapositive of negative introspection states that if Bob \emph{has evidence}\footnote{Recall this is our shorthand for ($\Poss{Bob}$)} that he knows that the lane next to him is clear, then he knows it. But Bob identified that he has evidence that he knows, but does not know. According to S5 epistemic logic, his reasoning is invalid. But he clearly is better off by reasoning this way and checking his mirror again before changing lanes.
 
 Thus, in this case, if Bob were to reason by S5 epistemic logic, he would be strictly worse off, because he would infer that he knows the lane next to him is empty from his maybe having knowledge of it. This is a mark against S5 epistemic logic as a normative standard to strive for.
 
