--- a/Synth_Sub/AvoidingLob.tex
+++ b/Synth_Sub/AvoidingLob.tex
@@ -209,14 +209,14 @@ L\"ob's Theorem in provability logic is,
 \end{center}
 The $\Box$ is interpreted as ``provability" in some formal system, particularly one at least as powerful as Peano arithmetic. If a modal operator involves the reasoning abilities of a human-like agent, then \emph{a fortiori} it is a formal system at least as powerful as Peano arithmetic. This presents the following problem. If that agent, in its own reasoning system, can deduce the soundness of its own system, then it's reasoning system is unsound. This is because $\varphi$ can be any formula, including $\bot$. The particular modal logic at risk, in our mind, is epistemic logic, or any doxastic logic with accurate reasoners.
 
-L\"ob identified the following conditions of a formal system that would allow derivation of his theorem (which we present in modal form).
-\begin{enumerate}
-	\item $\Box(\varphi \iimplies \psi) \iimplies (\Box\varphi \iimplies \Box \psi)$\mbox{}\hfill Axiom K
-	\item $\Box\varphi \iimplies \Box\Box\varphi$ \mbox{}\hfill Axiom 4
-	\item From $\vdash \varphi$, infer $\Box\varphi$ \mbox{}\hfill Rule of Necessitation
-\end{enumerate}
-
-Items (1) and (3) are costants for all normal modal logics. There is a suppressed condition that L\"ob did not mention because it was unnecessary for the domain of arithmetic, but we must mention it here. The system must either admit of self-referential sentences or involve modal fixed points. Because systems of human-like reasoning must include self-referential sentences, at least in the form of Peano arithmetic, in order to remain human-like, this condition is satisfied for our concerns. 
+%L\"ob identified the following conditions of a formal system that would allow derivation of his theorem (which we present in modal form).
+%\begin{enumerate}
+%	\item $\Box(\varphi \iimplies \psi) \iimplies (\Box\varphi \iimplies \Box \psi)$\mbox{}\hfill Axiom K
+%	\item $\Box\varphi \iimplies \Box\Box\varphi$ \mbox{}\hfill Axiom 4
+%	\item From $\vdash \varphi$, infer $\Box\varphi$ \mbox{}\hfill Rule of Necessitation
+%\end{enumerate}
+%
+%Items (1) and (3) are costants for all normal modal logics. There is a suppressed condition that L\"ob did not mention because it was unnecessary for the domain of arithmetic, but we must mention it here. The system must either admit of self-referential sentences or involve modal fixed points. Because systems of human-like reasoning must include self-referential sentences, at least in the form of Peano arithmetic, in order to remain human-like, this condition is satisfied for our concerns. 
 
 Here we give a template derivation of L\"ob's Theorem, which we shall refer to below when describing how L\"ob's Obstacle corrupts various epistemic logics.
 
