fix refs in kk proof

--- a/Synth_Sub/AvoidingLob.tex
+++ b/Synth_Sub/AvoidingLob.tex
@@ -271,9 +271,9 @@ Clearly (2) is Axiom K, and (3), troublingly, is the antecedent of L\"ob's Theor
     \item $\Kns{i}\tlnot\Kns{i}\tlnot\Kns{i}\varphi \iimplies \Kns{i}\Kns{i}\varphi$\mbox{}\hfill Rule of Necessitation on (5.1), Axiom K
     \item $\varphi \iimplies \tlnot\Kns{i}\tlnot \varphi$\mbox{}\hfill Axiom T, Contrapositive
     \item $\tlnot\Kns{i}\tlnot\varphi \iimplies \Kns{i}\tlnot\Kns{i}\tlnot\varphi$\mbox{}\hfill Axiom 5
-    \item $\varphi \iimplies \Kns{i}\tlnot\Kns{i}\tlnot \varphi$\mbox{}\hfill (5.3), (5.4)
-    \item $\Kns{i}\varphi \iimplies \Kns{i}\tlnot\Kns{i}\tlnot\Kns{i}\varphi$\mbox{}\hfill $\Kns{i}\varphi$/$\varphi$, (5.5)
-    \item $\Kns{i}\varphi\iimplies\Kns{i}\Kns{i}\varphi$\mbox{}\hfill (5.2), (5.6)
+    \item $\varphi \iimplies \Kns{i}\tlnot\Kns{i}\tlnot \varphi$\mbox{}\hfill (4.3), (4.4)
+    \item $\Kns{i}\varphi \iimplies \Kns{i}\tlnot\Kns{i}\tlnot\Kns{i}\varphi$\mbox{}\hfill $\Kns{i}\varphi$/$\varphi$, (4.5)
+    \item $\Kns{i}\varphi\iimplies\Kns{i}\Kns{i}\varphi$\mbox{}\hfill (4.2), (4.6)
 	
 \end{proofenum}\mbox{}\hfill$\mathcal{QED}$
 \end{proof}
@@ -381,7 +381,7 @@ This logic also avoids the disaster of L\"ob's Theorem for belief, because $\Bel
 	\caption{A counterexample to $\Bels{i}(\Bels{i}\varphi \iimplies \varphi)$.}~\label{not_conceited}
 \end{figure}
 
-Therefore, L\"ob's Theorem has the same effect for belief as it does for Peano arithmetic: $i$ believes that her belief is accurate only for propositions that she actually believes. Her belief in her own accuracy is not a general claim. In this light, its effect is mitigated, in the same way it is for arithmetic. Because L\"ob's antecedent is false, $i$ is not what Smullyan calls a \emph{conceited} reasoner. With just L\"ob's Theorem for belief, $i$ constitutes what Smullyan calls a \emph{modest} reasoner.
+Therefore, L\"ob's Theorem has the same effect for belief as it does for Peano arithmetic: $i$ believes that her belief is accurate only for propositions that she actually believes. Her belief in her own accuracy is not a general claim. In this light, its effect is mitigated, in the same way it is for arithmetic. Because L\"ob's antecedent is not valid for belief, $i$ is not what Smullyan calls a \emph{conceited} reasoner. With L\"ob's Theorem for belief, $i$ constitutes what Smullyan calls a \emph{modest} reasoner.
 
 How shall we interpret the $\BPoss{i}$ operator? Figure \ref{not_conceited} could be read ``it is consistent with what $i$ believes that $i$ falsely believes that $p$". It is somewhat standard to interpret knowledge and belief operators in this way: ``...consistent with what $i$ knows/believes".  We do not endorse this interpretation due to the smell of circularity hanging around it. We prefer the interpretation ``$i$ considers it possible that..." for $\BPoss{i}$ and ``$i$ has evidence that..." for $\Poss{i}$. 
 
