multimodal section skeleton

--- a/Synth_Sub/AvoidingLob.tex
+++ b/Synth_Sub/AvoidingLob.tex
@@ -283,11 +283,22 @@ Thus, S5 satisfies L\"ob's three conditions, if we assume the presence of self-r
 We take this as a \emph{reductio ad absurdum} that S5 epistemic logic cannot be a logic for reasoning about the knowledge of agents with expressive power beyond Peano arithmetic. Therefore, it cannot be a logic of knowledge for humans, or human-like agents.
 
 \subsection{Hintikka's S4 Epistemic Logic}
+\label{sec:hint_s4}
 In Hintikka's 1967 \emph{Knowledge and Belief: A logic of the two notions}, he presented an epistemic logic for determining the validity and consistency of claims people make about knowledge and belief. He rejected out of hand the negative introspection axiom for knowledge, but chose to include positive introspection, which is formalized as $\Kns{i}\varphi\iimplies\Kns{i}\Kns{i}\varphi$. Clearly then, if Hintikka's epistemic system is meant for human-like reasoners who can express sentences like, ``If I know this sentence is true, then 1 + 1 = 2," then it crashes into L\"ob's Obstacle, with the extra bite of having the antecedent of L\"ob's Theorem as a theorem itself, and therefore, $\Kns{i}\varphi$ is also a theorem.
 
-\subsection{Bi-Modal Synthesis of Knowledge and Belief}
+\section{Bi-Modal Synthesis of Knowledge and Belief}
+\label{sec:bimodals}
 
-\section{Avoidsing L\"ob's Obstacle}
+\subsection{Hintikka's Bi-Modal System}
+\label{sec:hint_bimodal}
+
+\subsection{Kraus and Lehman System}
+\label{sec:kl}
+
+\subsection{Voorbraak's Objective Knowledge and Rational Belief: OKRIB}
+\label{sec:okrib}
+
+\section{Avoiding L\"ob's Obstacle}
 \label{sec:avoid_lob}
 
 \begin{table}[H]
